# voltvar-playground

./: .gitignore  README.md
backend/: grid_registry.py  main.py  pyproject.toml  simulator.py
circuits/: ieee13.dss  ieee18bus.dss  ieee33.dss  ieee9bus.dss
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: ControlPanel.jsx  GridGraph.jsx  GridPreview.jsx  InfoModal.jsx  StatsPanel.jsx  VoltageChart.jsx
frontend/src/screens/: FeedersScreen.jsx
rl/: batch_train.py  train.py  train_runs.toml
volt_var_env/: __init__.py  baselines.py  cli.py  curriculum.py  env.py  grid_config.py  lagrangian.py  mpc.py  profiles.py
