[project]
name = "voltvar-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "gymnasium>=1.0.0",
    "numpy>=2.0",
    "opendssdirect-py[extras]>=0.9.4",
    "stable-baselines3>=2.4.0",
    "torch>=2.0",
]

[tool.uv]
package = false
